--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="column">
-            <h4>Кампания</h4>
+            <h4>Компания</h4>
             <a href="https://t.me/community_x_telegram">Business</a>
             <a href="https://t.me/community_x_telegram">Partnership</a>
             <a href="https://t.me/community_x_telegram">Network</a>
